Working initial demo.

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ object_detection_scripts/sam_weights/
 object_detection_scripts/weights/
 object_detection_scripts/.env
 object_detection_scripts/__pycache__/
+object_detection_scripts/results/
 
